--- a/hookmeup/src/App.css
+++ b/hookmeup/src/App.css
@@ -1,38 +1,120 @@
 .App {
-  text-align: center;
+	text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+	height: 40vmin;
+	pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+	.App-logo {
+		animation: App-logo-spin infinite 20s linear;
+	}
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	background-color: #282c34;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
 }
 
 .App-link {
-  color: #61dafb;
+	color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
+}
+
+.spinner {
+	height: 80%;
+	margin: auto;
+}
+
+.App-intro {
+	font-size: large;
+}
+
+* {
+	box-sizing: border-box;
+}
+
+.movies {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+}
+
+.App-header h2 {
+	margin: 0;
+}
+
+.add-movies {
+	text-align: center;
+}
+
+.add-movies button {
+	font-size: 16px;
+	padding: 8px;
+}
+
+.movie {
+	padding: 5px 25px 10px 25px;
+}
+
+.errorMessage {
+	margin: auto;
+	font-weight: bold;
+	color: rgb(163, 24, 24);
+}
+
+.search {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+	margin-top: 10px;
+}
+
+input[type="submit"] {
+	padding: 5px;
+	background-color: transparent;
+	color: black;
+	border: 1px solid black;
+	width: 80px;
+	margin-left: 5px;
+	cursor: pointer;
+}
+.search > input[type="text"] {
+	width: 40%;
+	min-width: 180px;
+}
+
+@media screen and (min-width: 694px) and (max-width: 915px) {
+	.movie {
+		max-width: 33%;
+	}
+}
+
+@media screen and (min-width: 600px) and (min-width: 693px) {
+	.movie {
+		max-width: 50%;
+	}
+}
+
+@media screen and (max-width: 599px) {
+	.movie {
+		max-width: 100%;
+	}
 }
